--- a/styles/Curso.module.css
+++ b/styles/Curso.module.css
@@ -1,24 +1,24 @@
-@media (min-width: 768px) {
-	.grid {
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		column-gap: 2rem;
-	}
-}
 .contenido {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
-@media (min-width: 768px) {
-	.contenido {
-		grid-column: 2 / 3;
-	}
+.title {
+	margin: 0 0 5rem 0;
+	font-size: 4rem;
+	text-align: center;
+	font-weight: 900;
+	color: var(--primary);
 }
 .texto {
 	color: var(--blanco);
 	text-align: center;
 	font-size: 2.4rem;
+
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 7;
+	overflow: hidden;
 }
 .enlace {
 	margin-top: 2rem;
@@ -37,4 +37,17 @@
 .enlace:hover {
 	background-color: var(--primary);
 	color: var(--blanco);
+}
+
+@media (min-width: 768px) {
+	.grid {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		column-gap: 2rem;
+	}
+}
+@media (min-width: 768px) {
+	.contenido {
+		grid-column: 2 / 3;
+	}
 }
