fixed: styles of some components

--- a/styles/Carrito.module.css
+++ b/styles/Carrito.module.css
@@ -1,6 +1,8 @@
 .contenido {
 	display: grid;
-	gap: 4rem;
+	align-items: baseline;
+	gap: 5rem;
+	padding: 7rem 0;
 }
 @media (min-width: 768px) {
 	.contenido {
@@ -78,7 +80,6 @@
 }
 .resumen {
 	background-color: #f6f5f5;
-	margin: 5.8rem 0;
 	padding: 3rem;
 	border-radius: 1rem;
 }
