--- a/styles/Guitarra.module.css
+++ b/styles/Guitarra.module.css
@@ -4,7 +4,7 @@
 	column-gap: 1rem;
 	align-items: center;
 	max-width: 70rem;
-	margin: 0 auto;
+	margin: 3.5rem auto;
 }
 .contenido {
 	padding: 1rem;
