Refactor: Home view and its related components

--- a/src/assets/css/Carrito.module.css
+++ b/src/assets/css/Carrito.module.css
@@ -75,7 +75,7 @@
 }
 .eliminar:hover {
   cursor: pointer;
-  border: 1px solid var(--negro);
+  border: 1px solid var(--black);
   background-color: #f6f5f5;
 }
 .resumen {
