--- a/src/components/Course/css/Course.module.css
+++ b/src/components/Course/css/Course.module.css
@@ -44,6 +44,7 @@
   font-weight: 900;
   color: var(--white);
   border: 2px solid var(--primary);
+  border-radius: 4px;
   padding: 1rem 5rem;
   transition-property: background-color;
   transition-duration: 0.3s;
