--- a/src/components/EntriesList/css/Entry.module.css
+++ b/src/components/EntriesList/css/Entry.module.css
@@ -43,6 +43,7 @@
   font-weight: 900;
   color: var(--black);
   border: 2px solid var(--primary);
+  border-radius: 4px;
   padding: 1rem 5rem;
   transition-property: background-color;
   transition-duration: 0.3s;
