--- a/src/components/GuitarList/css/Guitar.module.css
+++ b/src/components/GuitarList/css/Guitar.module.css
@@ -53,9 +53,11 @@
   justify-content: center;
   align-items: center;
 }
+
 .not_found h1 {
   color: var(--black);
 }
+
 .not_found a {
   color: var(--primary);
   text-decoration: none;
@@ -75,6 +77,7 @@
 
 .form select {
   border: 2px solid var(--primary);
+  border-radius: 4px;
   padding: 1rem;
   text-align: center;
 }
@@ -92,6 +95,7 @@
   padding: 2rem;
   color: var(--white);
   border: none;
+  border-radius: 4px;
   font-weight: 700;
   transition-property: background-color;
   transition-duration: 0.3s;
